objects/ASI_CRM_SG_FOC_Carry_Over__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Offtake_Quantity__c</fullName>
        <label>Offtake Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Carry_Over__c</fullName>
        <label>Carry Over</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>FOC Carry Overs</relationshipLabel>
        <relationshipName>FOC_Carry_Overs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Month__c</fullName>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>FOC Carry Overs</relationshipLabel>
        <relationshipName>FOC_Computation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Previous_Carry_Over_Value__c</fullName>
        <label>Previous Carry Over Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>FOC Carry Overs</relationshipLabel>
        <relationshipName>FOC_Computation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>FOC Carry Overs</relationshipLabel>
        <relationshipName>FOC_Computation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total__c</fullName>
        <label>Total</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>FOC Carry Overs (Wholesaler)</relationshipLabel>
        <relationshipName>FOC_Carry_Overs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wine_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine Category</label>
        <referenceTo>ASI_CRM_SG_Wine_Category__c</referenceTo>
        <relationshipLabel>FOC Carry Overs</relationshipLabel>
        <relationshipName>FOC_Computation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FOC Carry Over</label>
    <listViews>
        <fullName>ASI_CRM_SG_My_FOC_Carry_Overs</fullName>
        <columns>ASI_CRM_SG_Year__c</columns>
        <columns>ASI_CRM_SG_Month__c</columns>
        <columns>ASI_CRM_SG_Outlet__c</columns>
        <columns>ASI_CRM_SG_Wholesaler__c</columns>
        <columns>ASI_CRM_SG_Contract__c</columns>
        <columns>ASI_CRM_SG_SKU__c</columns>
        <columns>ASI_CRM_SG_Sub_brand__c</columns>
        <columns>ASI_CRM_SG_Carry_Over__c</columns>
        <columns>ASI_CRM_Offtake_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Previous_Carry_Over_Value__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_CRM_SG_Carry_Over__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My FOC Carry Overs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CO-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FOC Carry Overs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_FOC_Carry_Over</fullName>
        <active>true</active>
        <label>ASI CRM SG FOC Carry Over</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>